tests-integration/fixtures/checking/219_do_mixed_monad_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
effect :: Effect Int
aff :: Aff String
test :: Effect { a :: Int, b :: String }
test' :: forall (t29 :: Type). Effect (t29 :: Type)

Types

Diagnostics
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 16:3..16:11
   |
16 |   b <- aff
   |   ^~~~~~~~
error[CannotUnify]: Cannot unify 'Aff ?14[:0]' with 'Effect ?11[:0]'
  --> 16:3..16:11
   |
16 |   b <- aff
   |   ^~~~~~~~
error[CannotUnify]: Cannot unify 'Aff' with 'Effect'
  --> 22:3..22:11
   |
22 |   b <- aff
   |   ^~~~~~~~
error[CannotUnify]: Cannot unify 'Aff ?32[:0]' with 'Effect ?29[:0]'
  --> 22:3..22:11
   |
22 |   b <- aff
   |   ^~~~~~~~
